--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
       type="image/png"
       href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- pip button -->
-    <button class="pip" id="pip">Start</button>
-    <!-- HTML video Element -->
-    <video id="video" autoplay height="10px" width="10px" hidden></video>
+    <!--  video -->
+    <video
+      id="video"
+      autoplay
+      controls
+      height="360px"
+      width="640px"
+      hidden
+    ></video>
+    <!-- button -->
+    <div class="button-container">
+      <button class="pip" id="pip">START</button>
+    </div>
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
