followed tutorial and modified js script solution to be similar to tutorial

--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
   </head>
   <body>
     <!--  video -->
-    <video
-      id="video"
-      autoplay
-      controls
-      height="360px"
-      width="640px"
-      hidden
-    ></video>
+    <video id="video" controls height="360px" width="640px" hidden></video>
     <!-- button -->
     <div class="button-container">
       <button class="pip" id="pip">START</button>
